#6 Fix: last row cards alignment

--- a/src/Components/ArticleGrid/ArticleGrid.css
+++ b/src/Components/ArticleGrid/ArticleGrid.css
@@ -3,7 +3,8 @@
 }
 .card {
     position: relative;
-    margin: 10px auto;
+    margin: 15px;
+    width: 100%;
     border: 0;
     overflow: hidden;
  }
@@ -83,4 +84,20 @@
 }
 .loading {
     font-size: 2em;
+}
+@media screen and (min-width: 768px) {
+    .card {
+        max-width: 45%;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .card {
+        max-width: 30%;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .card {
+        max-width: 265px;
+        margin: 15px 10px;
+    }
 }
